--- a/my_tennis_club/members/templates/404.html
+++ b/my_tennis_club/members/templates/404.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My first HTLM</title>
+    <title>Wrong answer</title>
 </head>
 <body>
-    <h1>Helllo worlds firends and family
-    </h1>
-    <p>Welcome to the first Django project</p>
+
+    <h1>Whoops! Your page don't exists :( </h1>
+    
 </body>
 </html>
